--- a/sprint-1/day-4/index.html
+++ b/sprint-1/day-4/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Dom practice</title>
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <ul></ul>
-        <div style="height: 2000px;" id='greeting'>hello world</div>
+    <ul></ul>
+    <div id="parent">
+        <div>
+            <div>
+                <div>
+                    <p 
+                        style="cursor: pointer; background:lightcoral" 
+                        id='deeplyNestedChild'>hello world</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-        <script src='main.js'></script>
-    </body>
+    <script src='main.js'></script>
+</body>
 
 </html>
