--- a/sandbox/client/public/index.html
+++ b/sandbox/client/public/index.html
@@ -10,13 +10,13 @@
     />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>C194 React Sandbox</title>
+    <title>C284 React Sandbox</title>
 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
-    <div id="root"></div>
+    <div id="app"></div>
     
   </body>
 </html>
